--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ li {
   position: absolute;
   z-index: 2;
   box-shadow: 0px 10px 15px 20px #f1f1f1;
-  width: fit-content;
   border-radius: 10px;
   margin-top: 10px;
 }
@@ -59,6 +58,7 @@ li {
 .header .dropdown .menu-content .wrap {
   display: flex;
   border-radius: 10px;
+  height: 293px;
 }
 
 .header .dropdown .menu-content .picture {
@@ -89,14 +89,19 @@ li {
 
 .header .dropdown .menu-content .menu-item {
   display: flex;
+  align-items: center;
+}
+
+.header .dropdown .menu-content .menu-item .item-left .left-top {
+  padding: 15px 0px;
 }
 
 .header .dropdown .menu-content .menu-item ul {
-  padding: 34px 0px;
+  padding: 5px 0px;
 }
 
 .header .dropdown .menu-content .menu-item li {
-  padding: 10px 20px;
+  padding: 8px 20px;
   display: flex;
   justify-content: space-between;
   position: relative;
