--- a/style_menu.css
+++ b/style_menu.css
@@ -1,15 +1,25 @@
 body {
-  margin: 10px 150px !important;
+  margin: 10px 0px !important;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: 15px;
+  line-height: 1.5;
+}
+
+.container {
+  margin: 0px 180px;
 }
 
 li {
   list-style: none;
 }
 
-h4 {
+h4,
+p {
   margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 .header {
@@ -20,14 +30,17 @@ h4 {
 
 .header .btn-header a {
   background-color: #007bff;
-  padding: 12px;
-  border-radius: 10px;
+  padding: 15px 20px;
+  border-radius: 7px;
   color: white;
+  font-weight: 600;
+  display: block;
 }
 
 .header .btn-header a:hover {
   color: white;
-  transform: translateY(-10px);
+  transform: translateY(-5px);
+  transition: transform 0.3s;
 }
 
 .header a {
@@ -48,6 +61,7 @@ h4 {
 
 .header .dropdown > li > p {
   font-weight: 600;
+  color: #506690;
 }
 
 .header .dropdown li {
