--- a/style_introduce.css
+++ b/style_introduce.css
@@ -13,13 +13,12 @@
 }
 
 .introduce .intro-item .title {
-  font-size: 18px;
-  color: #c2cff9;
+  font-size: 20px;
   margin-top: 10px;
 }
 
 .introduce .intro-item .content {
-  font-size: 16px;
+  line-height: 1.5;
   color: #8b9ebb;
   margin-top: 15px;
 }
