--- a/style_getstarted.css
+++ b/style_getstarted.css
@@ -7,52 +7,49 @@
 
 .question {
     display: flex;
+    flex-wrap: wrap;
     line-height: 1.5;
 }
 
-.question .question-list{
+.question .question-item{
     width: 50%;
-}
-
-
-
-
-.question .list-left{
-    margin-right: 40px;
-}
-
-
-.question .question-list .question-item{
     display: flex;
-    margin-bottom: 60px
+    padding-right: 30px;
+    margin-bottom: 30px;
 }
 
-.question .question-list .question-item .icon{
+.question .question-item .icon{
     background-color: #44ba96;
-    padding: 7px;
+    padding: 4px;
     text-align: center;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     border-radius: 20px;
     color: white;
     margin-right: 20px;
 }
 
-
-.question .question-list .question-item .q-a{
+.question  .question-item .q-a{
     flex: 1;
 }
 
 
-.question .question-list .question-item .q{
+.question .question-item .q{
 color: white;
 font-size: 18px;
 }
 
 
-.question .question-list .question-item .a{
+.question  .question-item .a{
 color: #869ab8;
 margin-top: 10px;
+}
+
+@media only screen and (max-width: 768px) {
+    .question .question-item{
+        width: 100%;
+    }
+
 }
 
 /* ------------------------css for get-buy div--------------------------------------- */
@@ -74,14 +71,12 @@ margin-top: 10px;
 
 .get-buy .title{
     color: white;
-    font-size: 40px;
 }
 
 .get-buy .text{
-    font-size: 19px;
     color: #869ab8;
-    font-weight: 300;
-    margin: 30px 150px 40px;
+    margin: 30px auto 40px;
+    max-width: 600px;
 }
 
 .get-buy .button a{
