--- a/style_social.css
+++ b/style_social.css
@@ -1,15 +1,34 @@
 .wrapper-social {
   border-top: 1px solid #c2cff9;
   border-bottom: 1px solid #c2cff9;
-  padding: 50px 0px;
+  padding: 40px 0px;
   margin-top: 100px;
 }
 
 .social {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.social .social-item {
+  width: 16.6%;
+  padding: 10px 15px;
 }
 
 .social .social-item img {
-  width: 130px;
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px){
+  .social .social-item {
+    width: 33.33%;
+  }
+
+}
+
+@media only screen and (max-width: 572px){
+  .social .social-item {
+    width: 50%;
+  }
 }
