--- a/style_menu.css
+++ b/style_menu.css
@@ -51,7 +51,9 @@
 }
 
 .header .dropdown .menu-content {
-  display: none;
+  /* display: none; */
+  opacity: 0;
+  visibility: hidden;
   position: absolute;
   z-index: 2;
   box-shadow: 0 1.5rem 4rem rgba(22,28,45,.15);
@@ -224,11 +226,16 @@
 }
 
 .header li:hover > .menu-content {
-  display: block;
+  /* display: block; */
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.8s;
 }
 
 .header .dropdown .menu-content .menu-item .sub-menu {
-  display: none;
+  /* display: none; */
+  opacity: 0;
+  visibility: hidden;
   width: 100%;
   position: absolute;
   left: 228px;
@@ -249,7 +256,10 @@
 }
 
 .header .dropdown .menu-content .menu-item li:hover > .sub-menu {
-  display: block;
+  /* display: block; */
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.8s;
 }
 
 .header .dropdown .menu-content .menu-item li:hover i {
