--- a/style_menu.css
+++ b/style_menu.css
@@ -279,6 +279,10 @@
 
   .header .menu-bar{
     display: block;
+    cursor: pointer;
+    border: none;
+    background-color: white;
+
   }
 
   .header .menu-bar i{
